--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Free Currency Converter</title>
-
+  <title>Currency Converter</title>
+<link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,6 +13,7 @@
 <div class="container">
   <div class="row">
     <h1 style="color: #7ed321" align="center">Currency Converter</h1>
+    <h4 style="color: #7ed321" align="center">ACL With Google Challenge 2.0</h4>
   </div>
   <form>
     <div class="row">
